...
    case pen, highlighter, underline, eraser, lasso

    var id: String { rawValue }

    var title: String {
        switch self {
        case .pen: "Pen"
        case .highlighter: "Smart Highlighter"
        case .underline: "Smart Underline"
        case .eraser: "Eraser"
        case .lasso: "Lasso"
        }
    }

...
